pyAAL/tests/tmp_gen.fotl
Error: syntax error, unexpected $end
